[Calibration] mise en page

--- a/include/Calibration.tex
+++ b/include/Calibration.tex
@@ -737,15 +737,14 @@ remains the same.
 \label{sec:Summary_calibration}
 
 This chapter gives an overview on the Timepix3 readout ASIC which is
-used in the tracking planes of the CLICdp Timepix3 telescope (see
-\cref{ch:Telescope}) and also employed as a test vehicle for the
-characterisation of thin sensors (see \cref{ch:ThinSensorsStudies})
-and active-edge sensors (see \cref{ch:ActiveEdgeSensors}).
-
-The test-pulse injection method is used to calibrate the operating
-threshold and the TOT value into energy depositions. In
-\cref{ch:ThinSensorsStudies}, the calibration is applied to the
-test-beam data and validated with simulations.
+used in the tracking planes of the CLICdp Timepix3 telescope
+(\cref{ch:Telescope}) and also employed as a test vehicle for the
+characterisation of thin sensors (\cref{ch:ThinSensorsStudies}) and
+active-edge sensors (\cref{ch:ActiveEdgeSensors}). The test-pulse
+injection method is used to calibrate the operating threshold and the
+TOT value into energy depositions. In \cref{ch:ThinSensorsStudies},
+the calibration is applied to the test-beam data and validated with
+simulations.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
