--- a/thesis_acknowledge.tex
+++ b/thesis_acknowledge.tex
@@ -31,6 +31,9 @@ gatherings lunches, coffee breaks and social events. More
 particularly, I express my gratitude to:
 
 \begin{itemize}
+\item Konrad Elsener for various instructive discussions, support and
+  for reviewing the chapter on the CLIC experiment.
+
 \item Andreas Nurnberg, who always was present for providing his
   counsel and advice and all his help and patience for reading
   meticulously my thesis and giving me instructive comments and
@@ -41,22 +44,20 @@ particularly, I express my gratitude to:
   Timepix chips.
 
 \item Daniel Hynds and Adrian Fiergolski for the various discussions
-  and test-beams we have shared.
+  and test-beams we have shared. Edinei Santin, for reviewing the
+  chapter on pixel readout ASICs.
 
 \item Mathieu Benoît for leading me to the pixel world through
   test-beams, TCAD simulations and AllPix simulations.
 
-\item Rosa Simoniello, for sharing the office and all the discussions
-  and laughs we have shared.
+\item Rosa Simoniello, for sharing the office and many discussions.
 \end{itemize}
 
 I would like to thank my friends with whom I have shared great
 memorable moments and I could count on them for any kind of
 support. My friends from Lausanne whom I met during my studies at EPFL
 and we shared many years on the university benches and now we share so
-many great events: Charlotte, Chloé, Christophe, Coralie, Mina, Salim
-and Sebastien. And to my friends I have met at CERN: Elena, Enrico,
-Luca, Milena and Myriam.
+many great events. And also to my friends I have met at CERN.
 
 Finally, I would like to thank my amazing family: my parents,
 Mahmanzar and Behzad, for their unconditional love and support
