--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -652,8 +652,6 @@ height=4em]
         \node[above, color=white] at (0.5, 0.78) {(\textbf{DUT})};
 
         \draw[->, very thick, color=black](0.75, 0.38) -- (0.25, 0.44);
-        % \node[right, color=black] at (0.77, 0.42) {\textbf{Beam}};
-
         \draw[<->, very thick, color=black](0.33, 0.25) -- (0.66, 0.25);
         \node[below, color=black] at (0.5, 0.25) {\textbf{152~mm}};
 
@@ -712,6 +710,8 @@ height=4em]
     \column{0.4\textwidth}
 
     \begin{itemize}
+    \item Spatial resolution: position of the hit on the DUT
+      vs. reconstructed track.
     \item Pointing resolution on the DUT:
       \textcolor{Green}{$\sim2\,\micron$}
     \item Time resolution per plane: \textcolor{Green}{$\sim$1~ns}
