[ActiveEdge] minor changes

--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -576,7 +576,7 @@ between the edge of the sensor and the first pixel.
 the TCAD simulations for the simulated pixel cell. In TCAD
 simulations, only the sensor is simulated and the effect of the
 readout chip and the bump bonding are not included. The readout chip
-can increase the temperature and increase the leakage current. 
+can increase the temperature and the leakage current.
 
 In simulations, the assemblies with grounded guard ring (including all
 sensor thicknesses) and without guard ring show a breakdown of the
