--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -108,7 +108,7 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 %    \includegraphics[height=2cm]{../../logos/logo_cern.pdf}
 % }
 
-\setlength{\leftmargini}{3pt} % nalipour: left margin indentation
+\setlength{\leftmargini}{2pt} % nalipour: left margin indentation
 \renewcommand{\inserttotalframenumber}{\ref{lastframe}} 
 \begin{document}
 \renewcommand{\inserttotalframenumber}{\pageref{lastslide}}
@@ -142,10 +142,15 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 
 \vspace{-1cm}
   \hbox to \textwidth{
-    \includegraphics[width=0.3\textwidth]{figures/ETHZ_logo}
+    % Chair: Prof. Dr. Jérôme Faist \\
+    % Examiner: Prof. Dr. Günther Dissertori
+    % Co-examiners: 
+    
+
     \hfill
-    \includegraphics[width=0.15\textwidth]{figures/CERN_logo.jpg}
-    \includegraphics[width=0.15\textwidth]{figures/CLIC_logo}
+    \includegraphics[width=0.2\textwidth]{figures/ETHZ_logo}
+    \includegraphics[width=0.1\textwidth]{figures/CERN_logo.jpg}
+    \includegraphics[width=0.1\textwidth]{figures/CLIC_logo}
   }
   \end{frame}
 }
