[presentation] monolithic detector

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -499,6 +499,39 @@
 \begin{frame}
   \frametitle{Pixel detectors in high-energy physics}
 
+  \begin{columns}
+    \column{0.7\textwidth}
+    \begin{itemize}
+    \item Hybrid detectors:
+      \begin{itemize}
+      \item Planar silicon sensor
+      \item Mixed-signal readout chip
+        \begin{itemize}
+        \item Possibility for complexe signal processing
+        \end{itemize}
+      \end{itemize}
+    \end{itemize}
+
+    \column{0.3\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/hybridDet.pdf}
+  \end{columns}
+
+  \begin{columns}
+    \column{0.7\textwidth}
+    \begin{itemize}
+    \item Monolithic pixel devices:
+      \begin{itemize}
+      \item 
+      \end{itemize}
+    \end{itemize}
+
+    \column{0.3\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/monolithic.pdf}
+  \end{columns}
+
+
 
 \end{frame}
 
@@ -564,8 +597,7 @@ height=4em]
     \end{itemize}
 
     \column{0.4\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/hybridDet.pdf}
+ 
   \end{columns}
 
   \begin{itemize}
