[presentation] title page

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -135,23 +135,50 @@ Tehrani]{Niloufar Alipour Tehrani \vspace{0.3cm} }
 
 
 {
-  \usebackgroundtemplate{\includegraphics[width=1.0\paperwidth]{figures/CLIC_canvas_accelerator.jpg}}
+  \usebackgroundtemplate{
+    \includegraphics[width=1.0\paperwidth]{figures/CLIC_canvas_accelerator.jpg}}
+  
+  
   \begin{frame}
-    \vspace{2.3cm}
-    \titlepage
-
-\vspace{-1cm}
-  \hbox to \textwidth{
-    % Chair: Prof. Dr. Jérôme Faist \\
-    % Examiner: Prof. Dr. Günther Dissertori
-    % Co-examiners: 
     
 
-    \hfill
-    \includegraphics[width=0.2\textwidth]{figures/ETHZ_logo}
-    \includegraphics[width=0.1\textwidth]{figures/CERN_logo.jpg}
-    \includegraphics[width=0.1\textwidth]{figures/CLIC_logo}
-  }
+    \hbox to \textwidth{
+      \includegraphics[width=0.15\textwidth]{figures/logo_cern.pdf}
+      \hfill
+      \includegraphics[width=0.2\textwidth]{figures/logo_clic.pdf}
+      % \includegraphics[width=0.2\textwidth]{figures/ETHZ_logo.pdf}
+      % \includegraphics[width=0.1\textwidth]{figures/CERN_logo.jpg}
+      % \includegraphics[width=0.1\textwidth]{figures/CLIC_logo}
+    }
+    % \hspace{-0.5cm}
+    % \includegraphics[width=0.1\textwidth]{figures/logo_cern.pdf}
+    % \hspace{8.5cm}
+    % \includegraphics[width=0.1\textwidth]{figures/logo_clic.pdf}
+
+    \vspace{0.3cm}
+    \titlepage
+
+
+    \vspace{-0.2cm}
+    
+    \scriptsize{
+      \hspace{-0.8cm}
+      Chair: Prof. Dr. J\'{e}r\^{o}me Faist \\
+      \hspace{-0.8cm}
+      Examiner: Prof. Dr. G\"{u}nther Dissertori\\
+      \hspace{-0.8cm}
+      Co-examiners: Prof. Dr. Rainer Wallny \\
+      \hspace{0.7cm} Dr. Dominik Dannheim \\
+    }
+
+    % \hspace{5cm}
+    % \vspace{-3cm}
+    % \includegraphics[width=0.4\textwidth]{figures/ETHZ_logo.pdf}
+    % \vspace{-1cm}
+    % \hbox to \textwidth{
+    %   \hfill
+    %   \includegraphics[width=0.1\textwidth]{figures/ETHZ_logo.pdf}
+    % }
   \end{frame}
 }
 \include{content}
